--- a/packages/product/serverless.yml
+++ b/packages/product/serverless.yml
@@ -22,10 +22,12 @@ functions:
       - http:
           method: get
           path: /products
+          cors: true
   getProduct:
     handler: ${self:custom.distFolder}/get-product.getProduct
     events:
       - http:
           method: get
           path: /products/{id}
+          cors: true
 
