--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "serverless-offline": "^6.9.0",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0"
+  },
+  "dependencies": {
+    "pg": "^8.5.1"
   }
 }
