Enable jest tests from each microservice folder

--- a/packages/product/package.json
+++ b/packages/product/package.json
@@ -3,16 +3,14 @@
   "version": "0.1.0",
   "description": "Product service of My Shop",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "deploy:dev": "NODE_ENV=development webpack && sls deploy",
     "deploy:prod": "webpack && sls deploy",
     "build:dev": "NODE_ENV=development webpack",
-    "build:prod": "webpack"
+    "build:prod": "webpack",
+    "seed": "NODE_ENV=development webpack && node build/populate-products.js"
   },
   "keywords": [],
   "author": "Ilya Kushlianski",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.13.14"
-  }
+  "license": "ISC"
 }
