--- a/packages/product/package.json
+++ b/packages/product/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "jest",
     "deploy:dev": "NODE_ENV=development webpack && sls deploy",
+    "deploy": "NODE_ENV=development webpack && sls deploy",
     "deploy:prod": "webpack && sls deploy",
     "build:dev": "NODE_ENV=development webpack",
     "build:prod": "webpack",
@@ -12,5 +13,8 @@
   },
   "keywords": [],
   "author": "Ilya Kushlianski",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "serverless-dotenv-plugin": "^3.9.0"
+  }
 }
