--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
+    "aws-sdk": "^2.897.0",
     "dotenv": "^8.2.0",
     "pg": "^8.5.1",
     "yup": "^0.32.9"
