--- a/packages/import-service/serverless.yml
+++ b/packages/import-service/serverless.yml
@@ -31,6 +31,7 @@ functions:
       - http:
           path: import
           method: get
+          cors: true
           request:
             parameters:
               querystrings:
@@ -44,3 +45,4 @@ functions:
           rules:
             - prefix: ${env:UPLOADED_FOLDER}
           existing: true
+          cors: true
