Send messages after parsing products, trigger catalogBatchProcess on message

--- a/packages/import-service/.env.example
+++ b/packages/import-service/.env.example
@@ -4,3 +4,11 @@ PRODUCTS_FILE_EXTENSION=.csv
 UPLOAD_BUCKET=
 UPLOADED_FOLDER=
 PARSED_FOLDER=
+SUBSCRIPTION_ENDPOINT_1=
+
+# DB connection
+PGUSER=
+PGHOST=
+PGPASSWORD=
+PGDATABASE=
+PGPORT=
